--- a/Binary-Ballers/src/index.css
+++ b/Binary-Ballers/src/index.css
@@ -15,3 +15,17 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+/* add .background for bg images */
+
+/* html, body {
+  padding: 0;
+  margin: 0;
+  overflow-y:auto;
+  color: rbg(209, 220, 240);
+  overflow: auto;
+  height: 100%;
+
+  overscroll-behavior: none;
+
+} */
