Major work on Homepage

--- a/Binary-Ballers/src/global.css
+++ b/Binary-Ballers/src/global.css
@@ -1,6 +1,4 @@
-@import 'tailwindcss';
-
-/* html, body {
+html, body {
     padding: 0;
     margin: 0;
     overflow-y:auto;
@@ -9,4 +7,6 @@
     height: 100%;
 
     overscroll-behavior: none;
-} */
+}
+
+
